sfdx-source/force-app/main/default/objects/Mx_Order_Product_Bundle__c/Mx_Order_Product_Bundle__c.object-meta.xml
<CustomObject>
    <description>LEM-14053: It is used to store all valid product bundles for Merchant Service Orders.</description>
    <label>Mx Order Product Bundle</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mx Order Product Bundles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>