sfdx-source/force-app/main/default/objects/Mx_Order_Product_Bundle__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <description>LEM-14053: It is used to store the name of the product bundle.</description>
    <label>Bundle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>