sfdx-source/force-app/main/default/objects/Mx_Order_Product_Bundle__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>LEM-14053: It is used to store the code of the country associated with the Product Bundle.</description>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code</valueSetName>
    </valueSet>
</CustomField>