sfdx-source/force-app/main/default/objects/Mx_Order_Product_Bundle__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-14035: It is used to check if the bundle is active or not.</description>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>