sfdx-source/force-app/main/default/objects/Mx_Order_Product_Bundle__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>LEM-14053: It is used to identify the specific type of order.</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net-New</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Post Onboarding</fullName>
            </value>
            <value>
                <fullName>Net-New, Return and Replacement</fullName>
                <isActive>false</isActive>
                <label>Net-New, Return and Replacement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>