sfdx-source/force-app/main/default/objects/Mx_Order_Product_Bundle__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>LEM-16890: It is used to store the State associated to the Product Bundle.</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>