sfdx-source/force-app/main/default/objects/Mx_Order_Product_Bundle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Bundle_Name__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>